--- a/resources/assets/mubble/models/item/cappy.json
+++ b/resources/assets/mubble/models/item/cappy.json
@@ -1,7 +1,7 @@
 {
 	"textures": {
-		"0": "mubble:costume/cappy",
-		"particle": "mubble:costume/cappy"
+		"0": "costume/cappy",
+		"particle": "costume/cappy"
 	},
 	"elements": [
 		{
@@ -65,33 +65,57 @@
 		},
 		{
 			"from": [-2, 14, 0],
-			"to": [0, 16, 18],
+			"to": [0, 16, 7],
 			"faces": {
 				"north": {"uv": [0, 0, 2, 2], "texture": "#missing"},
-				"east": {"uv": [0, 1, 9, 2], "texture": "#0"},
+				"east": {"uv": [0, 1, 5, 3], "texture": "#0"},
 				"south": {"uv": [2, 4, 3, 5], "texture": "#0"},
-				"west": {"uv": [0, 1, 9, 2], "texture": "#0"},
+				"west": {"uv": [0, 1, 5, 2], "texture": "#0"},
 				"up": {"uv": [2, 0, 3, 9], "texture": "#0"},
-				"down": {"uv": [2, 0, 3, 9], "texture": "#0"}
+				"down": {"uv": [0, 1, 1, 6], "texture": "#0"}
+			}
+		},
+		{
+			"from": [-2, 13, 7],
+			"to": [0, 16, 18],
+			"faces": {
+				"north": {"uv": [2, 4, 3, 5], "texture": "#0"},
+				"east": {"uv": [0, 1, 9, 3], "texture": "#0"},
+				"south": {"uv": [2, 4, 3, 5], "texture": "#0"},
+				"west": {"uv": [4, 0, 9, 2], "texture": "#0"},
+				"up": {"uv": [2, 0, 3, 9], "texture": "#0"},
+				"down": {"uv": [0, 0, 1, 6], "texture": "#0"}
 			}
 		},
 		{
 			"from": [16, 14, 0],
-			"to": [18, 16, 18],
+			"to": [18, 16, 9],
 			"faces": {
 				"north": {"uv": [0, 0, 2, 2], "texture": "#missing"},
-				"east": {"uv": [0, 1, 9, 2], "texture": "#0"},
+				"east": {"uv": [0, 1, 5, 2], "texture": "#0"},
 				"south": {"uv": [2, 4, 3, 5], "texture": "#0"},
-				"west": {"uv": [0, 1, 9, 2], "texture": "#0"},
+				"west": {"uv": [0, 1, 5, 3], "texture": "#0"},
 				"up": {"uv": [2, 0, 3, 9], "texture": "#0"},
-				"down": {"uv": [2, 0, 3, 9], "texture": "#0"}
+				"down": {"uv": [0, 1, 1, 6], "texture": "#0"}
 			}
 		},
 		{
-			"from": [0, 14, 16],
+			"from": [16, 13, 9],
+			"to": [18, 16, 18],
+			"faces": {
+				"north": {"uv": [2, 4, 3, 5], "texture": "#0"},
+				"east": {"uv": [4, 0, 9, 2], "texture": "#0"},
+				"south": {"uv": [2, 4, 3, 5], "texture": "#0"},
+				"west": {"uv": [0, 1, 5, 3], "texture": "#0"},
+				"up": {"uv": [2, 0, 3, 9], "texture": "#0"},
+				"down": {"uv": [0, 0, 1, 6], "texture": "#0"}
+			}
+		},
+		{
+			"from": [0, 13, 16],
 			"to": [16, 16, 18],
 			"faces": {
-				"north": {"uv": [0, 0, 9, 1], "texture": "#0"},
+				"north": {"uv": [0, 0, 9, 2], "texture": "#0"},
 				"east": {"uv": [0, 0, 2, 2], "texture": "#missing"},
 				"south": {"uv": [0, 4, 9, 5], "texture": "#0"},
 				"west": {"uv": [0, 0, 2, 2], "texture": "#missing"},
