--- a/resources/assets/mubble/models/item/cappy.json
+++ b/resources/assets/mubble/models/item/cappy.json
@@ -1,7 +1,7 @@
 {
 	"textures": {
-		"0": "costume/cappy",
-		"particle": "costume/cappy"
+		"0": "mubble:costume/cappy",
+		"particle": "mubble:costume/cappy"
 	},
 	"elements": [
 		{
