Fixed some stuff

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ logoFile="logo.png"
 modId="mubble"
 version="1.4-pre5"
 displayName="Mubble"
-updateJSONURL="https://raw.githubusercontent.com/Hugman76/Mubble/master/update.json"
+updateJSONURL="https://raw.githubusercontent.com/Hugman76/Mubble/1.13/update.json"
 displayURL="https://minecraft.curseforge.com/projects/mubble"
 credits="https://ftb.gamepedia.com/Mubble/Credits"
 authors="Hugman_76"
