Added recipes for leaves carpets and fixed some stuff

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,7 +8,7 @@ modId="mubble"
 version="1.4-pre6"
 displayName="Mubble"
 updateJSONURL="https://raw.githubusercontent.com/Hugman76/Mubble/1.13/update.json"
-displayURL="hhttps://sites.google.com/view/mubble-minecraft"
+displayURL="https://sites.google.com/view/mubble-minecraft"
 credits="https://ftb.gamepedia.com/Mubble/Credits"
 authors="Hugman_76"
 description='''Discover the Nintendo Universe and way more.'''
