--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -12,7 +12,8 @@ displayURL="https://sites.google.com/view/mubblemc"
 credits="https://ftb.gamepedia.com/Mubble/Credits"
 authors="Hugman"
 description='''
-    Mubble is a very complete mod that adds many useful blocks, items and costumes that feel very natural to Minecraft vanilla. 
+    Expand your world with features from the Nintendo universe, and way more.
+    Mubble is a very complete mod that adds many useful blocks, items and costumes that feel very natural to Minecraft vanilla.
 
     This mod also includes a ton of content based around Nintendo (a lot of Super Mario Maker 2 content) and indie games such as Celeste and Castlevania.
 
