--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,26 @@
-# eclipse
-bin
-*.launch
-.settings
-.metadata
+# gradle
+
+.gradle/
+build/
+out/
+classes/
+
+# idea
+
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# vscode
+
+.settings/
+.vscode/
+bin/
 .classpath
 .project
 
-# idea
-out
-*.ipr
-*.iws
-*.iml
-.idea
+# fabric
 
-# gradle
-build
-.gradle
-
-# other
-eclipse
-run
-
-# Files from Forge MDK
-forge*changelog.txt
-changelog.txt
-README.txt
-LICENSE.txt
-CREDITS.txt
+run/
+*.launch
