--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,17 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx1G
+
+# Fabric Properties
+	# check these on https://fabricmc.net/use
+	minecraft_version=1.15.1
+	yarn_mappings=1.15.1+build.2
+	loader_version=0.7.2+build.175
+
+# Mod Properties
+	mod_version = 2.1-1.15.1-Fabric
+	maven_group = hugman
+	archives_base_name = mubble
+
+# Dependencies
+	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+	fabric_version=0.4.25+build.282-1.15
