--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.15.1
-	yarn_mappings=1.15.1+build.37
-	loader_version=0.7.3+build.176
+	minecraft_version=1.15.2-pre2
+	yarn_mappings=1.15.2-pre2+build.3
+	loader_version=0.7.4+build.177
 
 # Mod Properties
 	mod_version = 2.2-1.15.1-Fabric
@@ -14,4 +14,4 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.4.27+build.286-1.15
+	fabric_version=0.4.28+build.288-1.15
