--- a/accessTransformers.cfg
+++ b/accessTransformers.cfg
@@ -1,4 +1,4 @@
-#PORTAL STUFF
+#Portal stuff
 public net.minecraft.entity.Entity field_71087_bX # inPortal
 public net.minecraft.entity.Entity field_181016_an # lastPortalPos
 public net.minecraft.entity.Entity field_181017_ao # lastPortalVec
