--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ group = project.maven_group
 minecraft {
 }
 
+repositories {
+	maven { url 'https://jitpack.io' }
+}
+
 dependencies {
 	//to change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -24,6 +28,10 @@ dependencies {
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
+	
+	modImplementation "com.github.ladysnake:Satin:${satin_version}"
+    // Include Satin as a Jar-in-Jar dependency (optional)
+    include "io.github.ladysnake:Satin:${satin_version}"
 }
 
 processResources {
