--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/use
 	minecraft_version=1.15.2
-	yarn_mappings=1.15.2+build.12
+	yarn_mappings=1.15.2+build.14
 	loader_version=0.7.8+build.184
 
 # Mod Properties
@@ -14,6 +14,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.4.29+build.290-1.15
+	fabric_version=0.4.32+build.292-1.15
 	
 	satin_version = 1.15-SNAPSHOT
+	bannerpp_version = 1.1.1+mc.1.15.2
