--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,16 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
+mod_version=3.0
+
+minecraft_version=1.15.2
+forge_version=31.1.14
+mappings_version=20200213-mixed-1.15.2
+
+patchouli_version=1.15.2-1.2-28.142
+
+#Mappings:
+#	http://export.mcpbot.bspk.rs/
+#	https://maven.tterrag.com/de/oceanlabs/mcp/mcp_snapshot
+#Patchouli:
+#	https://maven.blamejared.com/vazkii/patchouli/Patchouli/
+
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
