--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 buildscript
 {
 	repositories
-    {
+	{
 		maven { url = 'https://files.minecraftforge.net/maven' }
 		jcenter()
 		mavenCentral()
 	}
 	dependencies
-    {
+	{
 		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
 	}
 }
@@ -23,52 +23,95 @@ repositories
 }
 
 version = mod_version
-group = 'com.hugman.mubble'
-archivesBaseName = 'Mubble'
+group = 'hugman.${mod_id}'
+archivesBaseName = "${mod_name}"
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
-
-dependencies
-{
-    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
-    
-    compile fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
-}
 
 minecraft
 {
 	mappings channel: 'snapshot', version: "${mappings_version}"
 
-    accessTransformer = file('accessTransformers.cfg')
+	accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
 	runs
-    {
+	{
 		client
-        {
+		{
 			workingDirectory project.file('run')
 
 			property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 			property 'forge.logging.console.level', 'debug'
 			property 'fml.earlyprogresswindow', 'false'
+
+			mods
+			{
+				mubble
+				{
+					source sourceSets.main
+				}
+			}
 		}
 		server
-        {
+		{
 			workingDirectory project.file('run')
 
 			property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 			property 'forge.logging.console.level', 'debug'
 			property 'fml.earlyprogresswindow', 'false'
 
-			singleInstance(true)
+			mods
+			{
+				mubble
+				{
+					source sourceSets.main
+				}
+			}
 		}
 		data
-        {
+		{
 			workingDirectory project.file('run')
 
 			property 'forge.logging.markers', ''
 			property 'forge.logging.console.level', 'debug'
 
 			args '--mod', 'mubble', '--all', '--output', file('src/generated/resources/')
+
+			mods
+			{
+				mubble
+				{
+					source sourceSets.main
+				}
+			}
 		}
 	}
+}
+
+dependencies
+{
+	minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+	
+	compile fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
+}
+
+jar
+{
+	manifest
+	{
+		attributes
+		([
+			"Specification-Title": "${mod_id}",
+			"Specification-Vendor": "Hugman",
+			"Specification-Version": "1",
+			"Implementation-Title": "${mod_id}",
+			"Implementation-Version": "${mod_version}",
+			"Implementation-Vendor" :"Hugman",
+			"Implementation-Timestamp": new Date().format("dd-MM-yyyy'T'HH:mm:ssZ")
+		])
+	}
+
+	exclude "**/*.bat"
+	exclude "**/*.psd"
+	exclude "**/*.exe"
 }
