--- a/build.gradle
+++ b/build.gradle
@@ -92,8 +92,7 @@ dependencies
 {
 	minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 	
-	compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
-	runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
+	compile fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 }
 
 jar
