--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ repositories
 }
 
 version = mod_version
-group = 'hugman.${mod_id}'
+group = "hugman.${mod_id}"
 archivesBaseName = "${mod_name}"
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
@@ -92,7 +92,8 @@ dependencies
 {
 	minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 	
-	compile fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
+	compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
+	runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 }
 
 jar
