--- a/gradle.properties
+++ b/gradle.properties
@@ -2,18 +2,18 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.15.2
-	yarn_mappings=1.15.2+build.15
+	# check these on https://modmuss50.me/fabric.html
+	minecraft_version=20w21a
+	yarn_mappings=20w21a+build.18
 	loader_version=0.8.4+build.198
 
 # Mod Properties
-	mod_version = 3.0.4-1.15.2-Fabric
-	maven_group = hugman
-	archives_base_name = mubble
+	mod_version=3.0.5-20w21a-Fabric
+	maven_group=hugman
+	archives_base_name=mubble
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.10.8+build.310-1.15
+	fabric_version=0.10.10+build.347-1.16
 	
-	bannerpp_version = 1.1.1+mc.1.15.2
+	bannerpp_version=1.1.1+mc.1.15.2
