--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.8.4+build.198
 
 # Mod Properties
-	mod_version=3.1-20w22a-Fabric
+	mod_version=3.1
 	maven_group=hugman
 	archives_base_name=mubble
 
