--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=20w22a
-	yarn_mappings=20w22a+build.11
-	loader_version=0.8.6+build.200
+	minecraft_version=1.16-pre1
+	yarn_mappings=1.16-pre1+build.1
+	loader_version=0.8.7+build.201
 
 # Mod Properties
 	mod_version=4.0
@@ -14,4 +14,4 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.11.2+build.351-1.16
+	fabric_version=0.11.4+build.353-1.16
