--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.16-rc1
-	yarn_mappings=1.16-rc1+build.8
+	minecraft_version=1.16
+	yarn_mappings=1.16+build.1
 	loader_version=0.8.8+build.202
-	fabric_version=0.12.5+build.367-1.16
+	fabric_version=0.13.1+build.370-1.16
