--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
-	mod_version=4.0
+	mod_version=4.0-pre1
 	maven_group=hugman
 	archives_base_name=mubble
 
