--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.16.1
-	yarn_mappings=1.16.1+build.19
+	minecraft_version=20w27a
+	yarn_mappings=20w27a+build.1
 	loader_version=0.8.9+build.203
-	fabric_version=0.14.1+build.372-1.16
+	fabric_version=0.14.2+build.373-1.16
+
+# Patchouli Properties
+	# check this on https://maven.blamejared.com/vazkii/patchouli/Patchouli_1.16-fabric/maven-metadata.xml
+	patchouli_version=1.16-37.21
+
+# Mod Menu Properties
+	# check this on https://maven.fabricmc.net/io/github/prospector/modmenu/maven-metadata.xml
+	modmenu_version=1.12.2+build.17
