--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,9 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
 	minecraft_version=20w27a
-	yarn_mappings=20w27a+build.1
+	yarn_mappings=20w27a+build.9
 	loader_version=0.8.9+build.203
-	fabric_version=0.14.2+build.373-1.16
+	fabric_api_version=0.14.2+build.373-1.16
 
 # Patchouli Properties
 	# check this on https://maven.blamejared.com/vazkii/patchouli/Patchouli_1.16-fabric/maven-metadata.xml
