--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
 	id 'maven-publish'
 }
 
+apply plugin: "maven"
+
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
@@ -10,10 +12,8 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
-minecraft {
-}
-
 repositories {
+	jcenter()
 	maven { url 'https://jitpack.io' }
 	maven { url 'https://maven.blamejared.com' }
 }
@@ -22,14 +22,18 @@ dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
-
 	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
+	modCompile "com.github.Hugman76:CommonExpansion:master-SNAPSHOT"
+	modCompile "com.github.Terraformersmc:Terraform:1.16-SNAPSHOT"
 
-	//modImplementation "vazkii.patchouli:Patchouli_1.16-fabric:${patchouli_version}-FABRIC"
-
-	//modImplementation "io.github.prospector:modmenu:${modmenu_version}"
+	include "com.github.Hugman76:CommonExpansion:master-SNAPSHOT"
+	include "com.github.Terraformersmc:Terraform:1.16-SNAPSHOT"
 
 	compileOnly "com.google.code.findbugs:jsr305:3.0.2"
+}
+
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
 processResources {
@@ -45,16 +49,23 @@ processResources {
 	}
 }
 
-// ensure that the encoding is set to UTF-8, no matter what the system default is
-// this fixes some edge cases with special characters not displaying correctly
-// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
+processResources {
+	inputs.property "version", project.version
+
+	from(sourceSets.main.resources.srcDirs) {
+		include "fabric.mod.json"
+		expand "version": project.version
+	}
+
+	from(sourceSets.main.resources.srcDirs) {
+		exclude "fabric.mod.json"
+	}
+}
+
 tasks.withType(JavaCompile) {
 	options.encoding = "UTF-8"
 }
 
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
-// If you remove this task, sources will not be generated.
 task sourcesJar(type: Jar, dependsOn: classes) {
 	classifier = "sources"
 	from sourceSets.main.allSource
@@ -62,25 +73,4 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 
 jar {
 	from "LICENSE"
-}
-
-// configure the maven publication
-publishing {
-	publications {
-		mavenJava(MavenPublication) {
-			// add all the jars that should be included when publishing to maven
-			artifact(jar) {
-				builtBy remapJar
-			}
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
-		}
-	}
-
-	// select the repositories you want to publish to
-	repositories {
-		// uncomment to publish to the local maven
-		// mavenLocal()
-	}
 }
