--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,10 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
-	modCompile "com.github.Hugman76:CommonExpansion:master-SNAPSHOT"
-	modCompile "com.github.Terraformersmc:Terraform:1.16-SNAPSHOT"
+	//modCompile "com.github.Hugman76:CommonExpansion:master-SNAPSHOT"
+	//modCompile "io.github.prospector:modmenu:${modmenu_version}"
 
-	include "com.github.Hugman76:CommonExpansion:master-SNAPSHOT"
-	include "com.github.Terraformersmc:Terraform:1.16-SNAPSHOT"
+	//include "com.github.Hugman76:CommonExpansion:master-SNAPSHOT"
 
 	compileOnly "com.google.code.findbugs:jsr305:3.0.2"
 }
