--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=20w30a
-	yarn_mappings=20w30a+build.11
+	minecraft_version=1.16.2-pre1
+	yarn_mappings=1.16.2-pre1+build.5
 	loader_version=0.9.0+build.204
-	fabric_api_version=0.16.0+build.386-1.16
+	fabric_version=0.16.3+build.390-1.16
 
 # Patchouli Properties
 	# check this on https://maven.blamejared.com/vazkii/patchouli/Patchouli_1.16-fabric/maven-metadata.xml
