--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Patchouli Properties
 	# check this on https://maven.blamejared.com/vazkii/patchouli/Patchouli_1.16-fabric/maven-metadata.xml
-	patchouli_version=1.16-37.21
+	patchouli_version=1.16-37.21-FABRIC
 
 # Mod Menu Properties
 	# check this on https://maven.fabricmc.net/io/github/prospector/modmenu/maven-metadata.xml
