--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,8 @@ dependencies {
 
 	compileOnly "com.google.code.findbugs:jsr305:3.0.2"
 
-	modImplementation "io.github.prospector:modmenu:${project.modmenu_version}"
-	modImplementation "vazkii.patchouli:Patchouli_1.16-fabric:${project.patchouli_version}"
+	//modImplementation "io.github.prospector:modmenu:${project.modmenu_version}"
+	//modImplementation "vazkii.patchouli:Patchouli_1.16-fabric:${project.patchouli_version}"
 }
 
 configurations.all {
