--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,9 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
 	minecraft_version=1.16.3
-	yarn_mappings=1.16.3+build.17
-	loader_version=0.10.0+build.208
-	fabric_version=0.22.0+build.408-1.16
+	yarn_mappings=1.16.3+build.47
+	loader_version=0.10.1+build.209
+	fabric_version=0.24.0+build.411-1.16
 
 # Dawn Properties
-	dawn_version=1.2
+	dawn_version=6d931f3
