--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,10 @@
 org.gradle.jvmargs=-Xmx1G
-
-# Mod Properties
-	mod_version=4.0-pre6
-	maven_group=hugman
-	archives_base_name=mubble
-
-# Fabric Properties
-	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.16.3
-	yarn_mappings=1.16.3+build.47
-	loader_version=0.10.5+build.213
-	fabric_version=0.24.1+build.412-1.16
-
-# Dawn Properties
-	dawn_version=1.5
+mod_version=4.0-pre6
+mod_id=mubble
+# check these on https://modmuss50.me/fabric.html
+minecraft_version=1.16.4
+yarn_mappings=1.16.4+build.7
+loader_version=0.10.8
+fabric_version=0.25.1+build.416-1.16
+# https://github.com/DawnTeamMC/DawnAPI
+dawn_version=fcaebb6
