--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx1G
-mod_version=4.0-pre6
+mod_version=4.0-pre7
 mod_id=mubble
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.16.4
 yarn_mappings=1.16.4+build.7
 loader_version=0.10.8
-fabric_version=0.25.1+build.416-1.16
+fabric_version=0.26.2+1.16
 # https://github.com/DawnTeamMC/DawnAPI
-dawn_version=fcaebb6
+dawn_version=1.6
