--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,9 @@
 buildscript {
     dependencies {
-        classpath 'de.guntram.mcmod:crowdin-translate:1.3-pre1-hugman'
+        classpath "de.guntram.mcmod:crowdin-translate:${crowdin_translate_version}"
     }
     repositories {
-        maven {
-            name = 'CrowdinTranslate source'
-            url = "https://minecraft.guntram.de/maven/"
-        }
+        maven { url "https://minecraft.guntram.de/maven/" }
     }
 }
 
@@ -34,12 +31,13 @@ repositories {
 }
 
 dependencies {
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    minecraft "com.mojang:minecraft:${minecraft_version}"
+    mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
+    modImplementation "net.fabricmc:fabric-loader:${loader_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
 
-    modApi "com.github.DawnTeamMC:DawnAPI:${project.dawn_version}"
+    modApi "com.github.DawnTeamMC:DawnAPI:${dawn_version}"
+    modApi "com.github.emilyploszaj:trinkets:${trinkets_version}"
 
     compileOnly "com.google.code.findbugs:jsr305:3.0.2"
 }
