--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,14 @@
 org.gradle.jvmargs=-Xmx1G
-mod_version=4.0-pre7
+mod_version=4.0-pre8
 mod_id=mubble
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.4
-yarn_mappings=1.16.4+build.7
-loader_version=0.10.8
-fabric_version=0.26.3+1.16
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.1
+loader_version=0.11.1
+fabric_version=0.29.3+1.16
 # https://github.com/DawnTeamMC/DawnAPI
 dawn_version=1.6
+# https://minecraft.guntram.de/maven/de/guntram/mcmod/crowdin-translate/
+crowdin_translate_version=1.3+1.16
+# https://github.com/emilyalexandra/trinkets
+trinkets_version=2.6.7
