--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,45 @@
 org.gradle.jvmargs=-Xmx1G
-mod_version=4.0-pre8
+
+# Mod Metadata
 mod_id=mubble
+mod_name=Mubble
+mod_logo=https://raw.githubusercontent.com/DawnTeamMC/DawnTeamMC/master/mubble/logo.png
+mod_color=0xeb3729
+mod_default_release_type=beta
+
+# Loader Metadata
+loader_name=Fabric
+loader_icon=https://fabricmc.net/assets/logo.png
+
+# GitHub Metadata
+github_name=Mubble
+
+# CurseForge Metadata
+curseforge_slug=mubble
+curseforge_id=390135
+curseforge_game_versions=1.16.2, 1.16.3, 1.16.4, 1.16.5, Fabric
+curseforge_embedded_libraries=
+curseforge_required_dependencies=fabric-api, dawn, trinkets-fabric
+curseforge_optional_dependencies=
+
+# Modrinth Metadata
+modrinth_slug=mubble
+modrinth_id=k2LrJU0X
+modrinth_game_versions=1.16.2, 1.16.3, 1.16.4, 1.16.5
+modrinth_mod_loaders=fabric
+
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.1
+yarn_mappings=1.16.5+build.3
 loader_version=0.11.1
-fabric_version=0.29.3+1.16
+fabric_version=0.30.0+1.16
 # https://github.com/DawnTeamMC/DawnAPI
-dawn_version=1.6
-# https://minecraft.guntram.de/maven/de/guntram/mcmod/crowdin-translate/
-crowdin_translate_version=1.3+1.16
+dawn_version=1.6.2
 # https://github.com/emilyalexandra/trinkets
 trinkets_version=2.6.7
+
+# Changelog Options
+use_project_username=false
+changelog_hide_unimportant_commits=true
+changelog_max_commit_search=200
+discord_webhook_changelog_line_limit=10
