--- a/.github/workflows/check_build.yml
+++ b/.github/workflows/check_build.yml
@@ -3,21 +3,19 @@
 # certain platforms or Java versions, and provides a first line of defence
 # against bad commits.
 
-name: Build
+name: Check Build
 on: [pull_request, push]
 
 jobs:
   build:
     strategy:
       matrix:
-        # Use these Java versions
         java: [
-          1.8,  # Minimum supported by Minecraft
-          11,   # Current Java LTS
-          15    # Latest version
+            1.8,  # Minimum
+            11,   # LTS
+            15    # Latest
         ]
-        # and run on both Linux and Windows
-        os: [ubuntu-20.04, windows-latest]
+        os: [ ubuntu-20.04 ]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
@@ -37,5 +35,5 @@ jobs:
         if: ${{ runner.os == 'Linux' && matrix.java == '11' }} # Only upload artifacts built from LTS java on one OS
         uses: actions/upload-artifact@v2
         with:
-          name: Build result
+          name: Artifacts
           path: build/libs/
