Costumes can now have separate models for inventory/worn states

--- a/src/main/resources/assets/mubble/models/item/cappy.json
+++ b/src/main/resources/assets/mubble/models/item/cappy.json
@@ -2,5 +2,13 @@
 	"parent": "item/generated",
 	"textures": {
 		"layer0": "mubble:item/cappy"
-	}
+	},
+	"overrides": [
+        {
+            "predicate": {
+                "mubble:trinket": 1
+            },
+            "model": "mubble:costume/cappy"
+        }
+    ]
 }
