--- a/gradle.properties
+++ b/gradle.properties
@@ -18,8 +18,8 @@ github_name=Mubble
 curseforge_slug=mubble
 curseforge_id=390135
 curseforge_game_versions=1.16.2, 1.16.3, 1.16.4, 1.16.5, Fabric
-curseforge_embedded_libraries=auto-config-updated-api, cloth-config
-curseforge_required_dependencies=fabric-api, dawn, trinkets-fabric
+curseforge_embedded_libraries=trinkets-fabric
+curseforge_required_dependencies=fabric-api, dawn
 curseforge_optional_dependencies=
 
 # Modrinth Metadata
