--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
 
     modApi "com.github.DawnTeamMC:DawnAPI:v${dawn_version}"
-    includeMod "com.github.emilyploszaj:trinkets:${trinkets_version}"
+    includeMod "dev.emi:trinkets:${trinkets_version}"
 
     compileOnly "com.google.code.findbugs:jsr305:3.0.2"
 }
