--- a/gradle.properties
+++ b/gradle.properties
@@ -18,8 +18,8 @@ github_name=Mubble
 curseforge_slug=mubble
 curseforge_id=390135
 curseforge_game_versions=1.16.2, 1.16.3, 1.16.4, 1.16.5, Fabric
-curseforge_embedded_libraries=trinkets-fabric
-curseforge_required_dependencies=fabric-api, dawn
+curseforge_embedded_libraries=
+curseforge_required_dependencies=dawn, fabric-api, trinkets-fabric
 curseforge_optional_dependencies=
 
 # Modrinth Metadata
@@ -28,13 +28,13 @@ modrinth_id=k2LrJU0X
 modrinth_game_versions=1.16.2, 1.16.3, 1.16.4, 1.16.5
 modrinth_mod_loaders=fabric
 
-# check these on https://modmuss50.me/fabric.html
+# check these on https://fabricmc.net/versions.html
 minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.5
-loader_version=0.11.2
-fabric_version=0.31.0+1.16
+yarn_mappings=1.16.5+build.8
+loader_version=0.11.3
+fabric_version=0.33.0+1.16
 # https://github.com/DawnTeamMC/DawnAPI
-dawn_version=1.7
+dawn_version=1.8
 # https://maven.terraformersmc.com/releases/dev/emi/trinkets
 trinkets_version=2.6.7
 
