Add CurseForge and Modrinth pages + update links to assets and gradle scripts)

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Metadata
 mod_id=mubble
 mod_name=Mubble
-mod_logo=https://raw.githubusercontent.com/DawnTeamMC/DawnTeamMC/master/mubble/logo.png
+mod_logo=https://dawnteammc.github.io/mubble/images/logo.png
 mod_color=0xeb3729
 mod_default_release_type=beta
 
