--- a/gradle.properties
+++ b/gradle.properties
@@ -33,8 +33,9 @@ modrinth_optional_dependencies=
 
 # check these on https://fabricmc.net/versions.html
 minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.3
-loader_version=0.14.11
-fabric_version=0.69.1+1.19.3
+yarn_mappings=1.19.3+build.5
+loader_version=0.14.12
+fabric_version=0.72.0+1.19.3
+
 # https://github.com/DawnTeamMC/DawnAPI
-dawn_version=4-SNAPSHOT
+dawn_version=4.1.0
