Change to new workflow

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
 plugins {
-    id 'fabric-loom' version '1.0-SNAPSHOT'
+    id 'fabric-loom' version '1.2-SNAPSHOT'
 }
 
 apply from: 'https://dawnteammc.github.io/resources/gradle_scripts/fabric-mod/java-17.gradle'
-apply from: 'https://dawnteammc.github.io/resources/gradle_scripts/fabric-publish.gradle'
-apply from: 'https://dawnteammc.github.io/resources/gradle_scripts/fabric-translate.gradle'
 
 repositories {
     maven { url 'https://jitpack.io' }                // Required for Dawn API
@@ -15,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    modApi "com.github.DawnTeamMC:DawnAPI:v${dawn_version}"
+    modApi "com.github.DawnTeamMC:DawnAPI:${dawn_version}"
 
     // modImplementation "me.shedaniel.cloth:cloth-config-fabric:${cloth_version}"
     // include           "me.shedaniel.cloth:cloth-config-fabric:${cloth_version}"
