--- a/gradle.properties
+++ b/gradle.properties
@@ -1,35 +1,12 @@
 org.gradle.jvmargs=-Xmx1G
 
-# Mod Metadata
+# Release Metadata
 mod_id=mubble
 mod_name=Mubble
 mod_logo=https://dawnteammc.github.io/mubble/images/logo.png
-mod_color=0xeb3729
-# TODO: change this to stable when we release
-mod_default_release_type=beta
-
-# Loader Metadata
+mod_color=15415081
 loader_name=Fabric
 loader_icon=https://fabricmc.net/assets/logo.png
-
-# GitHub Metadata
-github_name=Mubble
-
-# CurseForge Metadata
-curseforge_slug=mubble
-curseforge_id=390135
-curseforge_game_versions=1.19.3, Java 17, Fabric
-curseforge_embedded_libraries=
-curseforge_required_dependencies=dawn, fabric-api
-curseforge_optional_dependencies=
-
-# Modrinth Metadata
-modrinth_slug=mubble
-modrinth_id=k2LrJU0X
-modrinth_game_versions=1.19.3
-modrinth_mod_loaders=fabric
-modrinth_required_dependencies=P7dR8mSH, meZK2DCX
-modrinth_optional_dependencies=
 
 # check these on https://fabricmc.net/versions.html
 minecraft_version=1.19.3
