--- a/gradle.properties
+++ b/gradle.properties
@@ -9,10 +9,10 @@ loader_name=Fabric
 loader_icon=https://fabricmc.net/assets/logo.png
 
 # check these on https://fabricmc.net/versions.html
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.8
-loader_version=0.14.21
-fabric_version=0.84.0+1.20.1
+minecraft_version=1.21
+yarn_mappings=1.21+build.9
+loader_version=0.15.11
+fabric_version=0.100.7+1.21
 
 # https://github.com/DawnTeamMC/DawnAPI
-dawn_version=5.0.0
+dawn_version=snapshot-SNAPSHOT
