--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    modApi "com.github.DawnTeamMC:DawnAPI:${dawn_version}"
+    //modApi "com.github.DawnTeamMC:DawnAPI:${dawn_version}"
 
     // modImplementation "me.shedaniel.cloth:cloth-config-fabric:${cloth_version}"
     // include           "me.shedaniel.cloth:cloth-config-fabric:${cloth_version}"
