--- a/gradle.properties
+++ b/gradle.properties
@@ -9,10 +9,7 @@ loader_name=Fabric
 loader_icon=https://fabricmc.net/assets/logo.png
 
 # check these on https://fabricmc.net/versions.html
-minecraft_version=1.21
-yarn_mappings=1.21+build.9
-loader_version=0.15.11
-fabric_version=0.100.7+1.21
-
-# https://github.com/DawnTeamMC/DawnAPI
-dawn_version=snapshot-SNAPSHOT
+minecraft_version=24w39a
+yarn_mappings=24w39a+build.6
+loader_version=0.16.5
+fabric_version=0.105.1+1.21.2
