--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ loader_name=Fabric
 loader_icon=https://fabricmc.net/assets/logo.png
 
 # check these on https://fabricmc.net/versions.html
-minecraft_version=1.21.2-pre1
-yarn_mappings=1.21.2-pre1+build.3
-loader_version=0.16.5
-fabric_version=0.105.3+1.21.2
+minecraft_version=1.21.3
+yarn_mappings=1.21.3+build.2
+loader_version=0.16.7
+fabric_version=0.107.0+1.21.3
